tests/errors/surf_lib_11.ki
# An unterminated character class is invalid.
var r = import("regex")
discard r.compile("[abc")
